--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently working as a QA Tester.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I've lived within the greater Seattle area for most of my life.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm into a lot of things such as following my favorite sports teams, listening to classical and metal music, and reading publications about finance.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I want to help create software and applications that many can find useful as a programmer/developer/QA engineer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently reside in Seattle, WA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I think I can be good at it.</p>
     </section>
 
     <footer id="footer">
